--- a/static/styles.css
+++ b/static/styles.css
@@ -63,3 +63,43 @@ button {
     color: #fff;
     cursor: pointer;
 }
+
+#username-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+#modal-content {
+    background: #121214;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    color: #fff;
+}
+
+#modal-content input {
+    padding: 10px;
+    margin: 10px 0;
+    width: 80%;
+    border-radius: 5px;
+    border: 1px solid #444;
+    background-color: #1A1A1E;
+    color: #fff;
+}
+
+#modal-content button {
+    padding: 10px 20px;
+    background-color: #8257E5;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    color: #fff;
+}
