--- a/templates/index.html
+++ b/templates/index.html
@@ -1,32 +1,31 @@
-<html>
 <!DOCTYPE html>
-   <html lang="en">
-   <head>
-       <meta charset="UTF-8">
-       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <title>Chat em Tempo Real</title>
-       <link rel="stylesheet" href="/static/styles.css">
-   </head>
-   <body>
-        <div id="chat-container">
-            <ul id="messages"></ul>
-            <form id="form" action="">
-                <input id="input" autocomplete="off" placeholder="Digite sua mensagem" />
-                <button>Enviar</button>
-            </form>
-        </div>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chat em Tempo Real</title>
+    <link rel="stylesheet" href="/static/styles.css">
+</head>
+<body>
+    <div id="chat-container">
+        <ul id="messages"></ul>
+        <form id="form" action="">
+            <input id="input" autocomplete="off" placeholder="Digite sua mensagem" />
+            <button>Enviar</button>
+        </form>
+    </div>
 
-        <div id="username-modal">
-            <div id="modal-content">
-                <h2>Bem-vindo!</h2>
-                <p>Digite seu nome:</p>
-                <input id="username-input" type="text" placeholder="Seu nome">
-                <button id="set-username">Entrar</button>
-            </div>
+    <div id="username-modal">
+        <div id="modal-content">
+            <h2>Bem-vindo!</h2>
+            <p>Digite seu nome:</p>
+            <input id="username-input" type="text" placeholder="Seu nome">
+            <button id="set-username">Entrar</button>
         </div>
+    </div>
 
-       <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js"></script>
-       <script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.4/socket.io.js"></script>
+    <script>
         var socket = io.connect('http://' + document.domain + ':' + location.port);
         var currentUsername = '';
 
@@ -38,7 +37,7 @@
 
             var content = data.system
                 ? `${data.msg} (${data.time})`
-                : `<strong>${data.username}</strong>: ${data.msg}`;
+                : `<strong>${data.username}</strong>: ${data.msg} <span class="timestamp">${data.time}</span>`;
 
             li.innerHTML = content;
             ul.appendChild(li);
@@ -69,5 +68,5 @@
             return false;
         };
     </script>
-   </body>
+</body>
 </html>
